# Reaper

./: .env.example  .pre-commit-config.yaml  ANALYSIS_AND_RECOMMENDATIONS.md  ANALYSIS_SUMMARY.md  ARCHIVE.md  CHANGELOG.md  CHECKPOINT.md  CODE_QUALITY.md  CONTRIBUTING.md  PHASE_2_PLAN.md  PHASE_2_QUICK_REF.md  PHASE_4_QUICK_REF.md  QUICKSTART.md  README.md  REAPER_AGENT_ROLES.md  ROADMAP.md  Roadmap  SECURITY.md  example_runner.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  COPILOT_INSTRUCTIONS.md  PROJECTS_GUIDE.md  SPACES_GUIDE.md  SPARK_AUTOMATION_GUIDE.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: ideas.md  ideas.yml  plugin-marketplace.md  plugin-marketplace.yml  q-and-a.md  q-and-a.yml
.github/workflows/: ci.yml  (+5 more)
benchmarks/: benchmark_performance.py
docs/: README.md  README_GUIDELINES.md
examples/: README.md  custom_plugin_example.py  multi_source_monitor.py  simple_pipeline.py
pipeline/: __init__.py  action.py  hearing.py  scoring.py  sight.py  smell.py  taste.py  touch.py
public_docs/: README.md  architects-curse.md  getting-started.md  github-spark-use-cases.md  how-to-create-plugins.md  operator-console-walkthrough.md  sense-isolation-faq.md
reaper/: __init__.py  hookspecs.py  models.py  plugin_manager.py
scripts/: new_plugin.py
templates/: PLUGIN_README_TEMPLATE.md  plugin_template.py
tests/: test_edge_cases.py  test_end_to_end.py  test_hookspecs.py  test_models.py  test_parametrized.py  test_pipeline_stubs.py  test_plugin_manager.py
(+36 files in other folders)
